workloads/demo-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo-nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: argocd-demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/part-of: argocd-demo-apps
    spec:
      containers:
        - name: nginx
          image: docker.io/nginxinc/nginx-unprivileged:1.29.5-alpine3.23-perl@sha256:77229af896de7df12b8b2e1c651294ed7d1a8b149650ea9d5e9c53cde87e1a63
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
