workloads/demo-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo-nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: argocd-demo-apps
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: http
      port: 8080
      targetPort: http
